daemon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indyscan-daemon
  labels:
    app: indyscan-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indyscan-daemon
  template:
    metadata:
      labels:
        app: indyscan-daemon
    spec:
      containers:
        - image: pstas/indyscan-daemon:4.1.0
          name: indyscan-daemon
          volumeMounts:
            - mountPath: /home/indyscan/indyscan-daemon/app-configs-docker/candydev.json
              name: daemon-config-volume
              subPath: candydev.json
            - mountPath: /home/indyscan/indyscan-daemon/app-configs-docker/genesis/CANDY_DEV.txn
              name: candydev-genesis-volume
              subPath: candydev.txn
      volumes:
        - name: daemon-config-volume
          configMap:
            name: daemon-config
            items:
              - key: daemon_config.json
                path: candydev.json
        - name: candydev-genesis-volume
          configMap:
            name: candydev-genesis
            items:
              - key: candydev.txn
                path: candydev.txn
