daemon-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: indyscan-daemon-ui
  name: indyscan-daemon-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indyscan-daemon-ui
  template:
    metadata:
      labels:
        app: indyscan-daemon-ui
    spec:
      containers:
        - image: pstas/indyscan-daemon-ui:4.1.0
          name: indyscan-daemon-ui
          ports:
            - containerPort: 3710
