elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: indyscan-elasticsearch
  name: indyscan-elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indyscan-elasticsearch
  template:
    metadata:
      labels:
        app: indyscan-elasticsearch
    spec:
      containers:
        - name: indyscan-elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9300
          image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: indyscan-es
      volumes:
        - name: indyscan-es
          persistentVolumeClaim:
            claimName: indyscan-es
