webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indyscan-webapp
  labels:
    app: indyscan-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indyscan-webapp
  template:
    metadata:
      labels:
        app: indyscan-webapp
    spec:
      containers:
        - name: indyscan-webapp
          image: idlab-docker.internal.idlab.org/idlab.org/solution_catalogue/indy/candyscan/webapp:0.0.2
          ports:
            - containerPort: 3707
