api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: indyscan-api
spec:
  selector:
    app: indyscan-api
  ports:
    - protocol: TCP
      port: 3708
      targetPort: 3708
