daemon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indyscan-daemon
spec:
  selector:
    app: indyscan-daemon
  ports:
    - protocol: TCP
      port: 3709
      targetPort: 3709
