daemon-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indyscan-daemon-ui
spec:
  selector:
    app: indyscan-daemon-ui
  ports:
    - protocol: TCP
      port: 3710
      targetPort: 3710
