elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indyscan-elasticsearch
spec:
  selector:
    app: indyscan-elasticsearch
  ports:
    - name: "9200"
      protocol: TCP
      port: 9200
      targetPort: 9200
    - name: "9300"
      protocol: TCP
      port: 9300
      targetPort: 9300
