kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indyscan-kibana
  labels:
    app.kubernetes.io/part-of: CANdyScan
    env: prod
spec:
  selector:
    app: indyscan-kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
