webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: indyscan-webapp
  name: indyscan-webapp
spec:
  ports:
    - name: "3707"
      protocol: TCP
      port: 443
      targetPort: 3707
  selector:
    io.kompose.service: indyscan-webapp
status:
  loadBalancer: {}
