ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indyscan-webapp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: candyscan.idlab.org
    http:
      paths:
      - backend:
          service:
            name: indyscan-webapp
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - candyscan.idlab.org
    secretName: candyscan-idlab-tls
